assets/css/main.css
/* ... */
.chapters .chapter_inner .chapter_number, .chapters .chapter_inner .chapter_title {
  color: #ffffff;
}

.chapters .chapter_inner .chapter_number {
  font-size: 0.9rem;
  text-transform: uppercase;
  margin: 0 0 1rem 0;
}

.chapters .chapter_inner .chapter_number::after {
  content: "";
  display: block;
  width: 40px;
  margin-top: 0.3rem;
  border-top: 3px solid #c25b6c;
}

.chapters .chapter_inner .chapter_title {
  font-size: 1.75rem;
  font-weight: 400;
  margin: 0 0 0.5rem 0;
}

.newsletter {
  padding: 2rem 0;
  text-align: center;
  color: #ffffff;
}

.newsletter .newsletter_title {
  text-transform: uppercase;
  font-size: 2.1rem;
  margin: 0 0 1rem;
}

.newsletter form {
  width: 700px;
  max-width: 90%;
  margin: 0 auto;
}

.newsletter form label {
  display: block;
  font-size: 1.35rem;
  font-weight: 400;
}

.newsletter form .newsletter_box {
  padding: 2rem 0;
  position: relative;
}

.newsletter form .email_input {
  width: 100%;
  padding: 1.35rem 3rem;
  -webkit-border-radius: 2.5rem;
          border-radius: 2.5rem;
  background-color: #333333;
  color: #6e6e6e;
  border: none;
  outline: none;
}

.newsletter form .subscribe_btn {
  width: 170px;
  padding: 1.35rem;
  color: #ffffff;
  font-size: 0.9rem;
  text-align: center;
  text-transform: uppercase;
  background-color: #c0334a;
  cursor: pointer;
  -webkit-border-radius: 2.5rem;
          border-radius: 2.5rem;
  border: none;
  outline: none;
  position: absolute;
  top: 33px;
  right: 0;
  -webkit-transition: background .35s ease-in-out;
  transition: background .35s ease-in-out;
}

.newsletter form .subscribe_btn:hover {
  background-color: rgba(192, 51, 74, 0.75);
}

.newsletter form .subscribe_btn:active {
  background-color: rgba(192, 51, 74, 0.5);
}

.pagination {
  padding: 2rem 0 6rem;
  text-align: center;
}

.pagination a, .pagination span {
  padding: 0.5rem 1rem;
  display: inline-block;
  color: #6e6e6e;
}

.pagination a {
  text-decoration: none;
}

.pagination a:hover {
  color: #ffffff;
}

.pagination .active {
  border-bottom: 1px solid #6e6e6e;
}

.pagination .active:hover {
  color: #6e6e6e;
}

.top {
  position: fixed;
  bottom: 25px;
  background-color: #333333;
  -webkit-border-radius: 0.3rem;
          border-radius: 0.3rem;
  color: #ffffff;
  font-size: 25px;
  width: 50px;
  height: 50px;
  line-height: 47px;
  text-align: center;
  cursor: pointer;
  -webkit-transition: all .25s ease;
  transition: all .25s ease;
  right: -100px;
  z-index: 10;
  opacity: .5;
}

.top i {
  line-height: 0;
}

.top.up {
  right: 30px;
}

.top:hover {
  color: #ffffff;
  background-color: #c0334a;
  opacity: .8;
}

.comment_area {
  background-color: #ffffff;
}

.comment_area .article-comments {
  max-width: 900px;
  padding: 1rem 1.85rem;
  margin: 0px auto;
}

.main_footer {
  background-color: #1c1c1c;
}

.social_footer {
  padding: 5px 0;
  list-style: none;
  margin: 0;
  text-align: center;
  border-bottom: 1px solid #333333;
}

.social_footer li {
  display: inline-block;
  margin-left: 0.5rem;
}

.social_footer a {
  color: #7b7b7b;
  display: inline-block;
  padding: 0.5rem 1rem;
  margin: 0.3rem 0;
  text-decoration: none;
  font-size: 1.75rem;
  -webkit-border-radius: 0.3rem;
          border-radius: 0.3rem;
  background-color: #262626;
  -webkit-transition: all .35s ease-in-out;
  transition: all .35s ease-in-out;
}

.social_footer a:hover {
  background-color: #c0334a;
  color: #ffffff;
}

.copyright {
  padding: 1rem 0;
  text-align: center;
}

.copyright p {
  color: #ffffff;
  font-size: 0.7rem;
  text-transform: uppercase;
  margin: 0;
}

.copyright a {
  text-decoration: none;
  color: #c0334a;
  -webkit-transition: all .35s ease-in-out;
  transition: all .35s ease-in-out;
}

.copyright a:hover {
  color: rgba(192, 51, 74, 0.75);
}

.post_wrapper, .entry_content {
  max-width: 900px;
  padding: 0 1.85rem;
  margin: 0 auto;
}

.post_content {
  width: 960px;
  max-width: 90%;
  margin: 7rem auto 7rem;
}

.post {
  background-color: #ffffff;
  margin-bottom: 1.5rem;
}

.post header {
  position: relative;
  overflow: hidden;
  margin-bottom: 3rem;
}

.post header img {
  width: 100%;
  max-height: 500px;
  vertical-align: middle;
}

.post header .post_description {
  position: absolute;
  left: 0;
  bottom: 0;
}

.post header .post_meta {
  display: inline-block;
  text-transform: uppercase;
  padding: 0.5rem 1rem;
  font-size: 1.1rem;
  margin: 0;
  color: #ffffff;
  background-color: rgba(210, 84, 105, 0.4);
}

.post header .post_title {
  padding: 1rem;
  font-size: 2rem;
  margin: 0;
  background-color: rgba(192, 51, 74, 0.4);
  color: #ffffff;
}

.post .entry_content {
  padding-bottom: 2rem;
}

.post_footer {
  padding: 2rem 0;
  background-color: #ffffff;
  border-top: 2px solid #6e6e6e;
}

.post_footer span {
  text-transform: uppercase;
  font-size: 0.8rem;
  color: #525c65;
}

.post_footer a {
  text-decoration: none;
  margin-left: 0.1rem;
  margin-bottom: 0.3rem;
  padding: 0.5rem 1rem;
  color: #6e6e6e;
  background-color: #e6e6e6;
  display: inline-block;
  -webkit-transition: all .35s ease-in-out;
  transition: all .35s ease-in-out;
}

.post_footer a:hover {
  background-color: #d25469;
  color: #ffffff;
}

.post_footer .post_share {
  float: left;
}

.post_footer .post_share a {
  font-size: 0.9rem;
}

.post_footer .post_tag {
  float: right;
}

.post_footer .post_tag a {
  font-size: 0.7rem;
  text-transform: uppercase;
  line-height: 1rem;
  display: inline-block;
}

.author {
  padding: 2rem 0.5rem;
  margin-bottom: 1.5rem;
  background-color: #ffffffc7;
}

.author .author_image {
  float: left;
  display: inline-block;
  -webkit-border-radius: 50%;
          border-radius: 50%;
  width: 100px;
  height: 100px;
  overflow: hidden;
  margin-right: 2rem;
}

.author .author_image img {
  width: 100%;
}

.author .author_info {
  padding-left: 8rem;
}

.author .author_info .author_title {
  font-size: 1.5rem;
  margin-top: 0;
  color: #262626;
}
/* ... */

